# bevy_trickfilm

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md
assets/: gabe-idle-run-animation-events.trickfilm.ron  gabe-idle-run-animation.trickfilm.ron  gabe-idle-run.trickfilm
assets/sprite_animation/: gabe-idle-run.trickfilm
assets/spritesheet_animation/: gabe-idle-run.titan  gabe-idle-run.trickfilm
assets/spritesheet_animation_titan/: gabe-idle-run.titan  gabe-idle-run.trickfilm
derive/: Cargo.toml
derive/src/: lib.rs
docs/: FileFormatSpecification.md
examples/: README.md  bevy_asset_loader.rs  demo.rs  demo_time.rs  demo_titan.rs  events.rs  pausing_animations.rs  sprite_animation.rs  sprite_sheet_animation.rs  sprite_sheet_animation_titan.rs  spritesheet_animation.rs  spritesheet_animation_asset_loader.rs  spritesheet_animation_titan.rs
examples/helpers/: animation_controller.rs
src/: animation.rs  asset_loader.rs  lib.rs
src/animation/: animation_sprite.rs  animation_spritesheet.rs  event.rs  mod.rs
src/asset/: asset_loader.rs  mod.rs  serde.rs
src/assets/: asset_loader.rs  mod.rs
