[package]
authors = ["KirmesBude <kirmesbude@gmail.com>"]
name = "bevy_trickfilm"
version = "0.11.0"
edition = "2024"
description = "Bevy plugin for spritesheet manifest loading"
repository = "https://github.com/KirmesBude/bevy_trickfilm"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "animation", "spritesheet", "assets"]
categories = ["game-development"]
readme = "README.md"
exclude = ["/assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_trickfilm_derive = { path = "derive", version = "0.10" }
bevy = { version = "0.16", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_ui", "bevy_animation"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1"

[dev-dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy_titan = "0.9"
bevy_asset_loader = { version = "0.23.0-rc.3", features = ["2d"] }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "demo_titan"
path = "examples/demo_titan.rs"

[[example]]
name = "bevy_asset_loader"
path = "examples/bevy_asset_loader.rs"

[[example]]
name = "pausing_animations"
path = "examples/pausing_animations.rs"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "demo_time"
path = "examples/demo_time.rs"